# shanhai

./: .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  PROJECT_STATE.md  README.md  REVIEW.md  pyproject.toml
.shanhai-meta/: README.md  project.yaml
.shanhai-meta/context/: .gitkeep  cognition.json  current-state.md
.shanhai-meta/conversations/: index.jsonl
.shanhai-meta/decisions/: .gitkeep  README.md  registry.jsonl
.shanhai-meta/events/: .gitkeep  stream.jsonl
apps/api/: pyproject.toml
apps/api/shanhai_api/: __init__.py  main.py
apps/console/: package.json
apps/web/: README.md  package.json
design-system/: README.md
design-system/shanhai-console/: README.md  SKILL.md  colors_and_type.css  css.json
design-system/tokens/: README.md  colors.json  shanhai-tokens.css  spacing.json  typography.json
docs/: AI_COLLABORATION_PRINCIPLES.md  ARCHITECTURE_CONTEXT.md  COLLABORATION_PROTOCOL.md  DEVELOPMENT_PRINCIPLES.md  PRODUCT_VISION.md  PROJECT_STATE.md  README.md  frontend-guideline.md
docs/design/: experience-runtime-candidate-provider-adapter-review-pr4.2.md  experience-runtime-contract-closure-review-pr4.1.md  experience-runtime-contract-implementation-review-pr4.1.md  experience-runtime-review-v0.1.md  foundation-phase-closure-review.md  m3.3-market-persistence-plan.md  m3.3-market-persistence-schema.md  m3.3-sqlite-implementation-plan.md  m3.4-context-layer-implementation-design.md  m3.4-knowledge-evolution-contract.md  m3.4-market-intelligence-context-layer-contract.md  m3.6-data-provider-layer-contract.md  m3.6-data-provider-layer-design.md  m3.6.0-provider-contract-review.md  m3.6.1-provider-composition-root-design.md  m3.6.3-observation-materialization-design.md  m3.6.4-observation-adapter-contract-design.md  market-foundation-hardening-phase0-closure-m2.5.md  market-foundation-hardening-phase1-closure-review-m2.5.md  market-foundation-hardening-phase2-implementation-review-m2.5.md  market-foundation-hardening-review-m2.5.md  market-knowledge-expansion-review-m2.3.md  market-reality-foundation-design.md  runstore-identity-migration-closure-review.md  (+12 more)
infrastructure/: docker-compose.yml
services/agent-runtime/: pyproject.toml
services/agent-runtime/shanhai_agent_runtime/: __init__.py  agent.py  context.py  examples.py  memory.py  runner.py  store.py  types.py
services/data-pipeline/: pyproject.toml
services/data-pipeline/shanhai_data_pipeline/: __init__.py  source.py
services/evaluation/: pyproject.toml
services/evaluation/shanhai_evaluation/: __init__.py  evaluator.py  models.py
services/experience/: pyproject.toml
services/experience-artifact/: pyproject.toml
services/experience-artifact/shanhai_experience_artifact/: __init__.py  models.py  repository.py  service.py
services/experience-evolution/: pyproject.toml
services/experience-evolution/shanhai_experience_evolution/: __init__.py  artifact_builder.py  candidate.py  models.py  producers.py  promotion.py  proposals.py  repository.py  service.py  validator.py
services/experience-runtime/: pyproject.toml
services/experience-runtime/shanhai_experience_runtime/: __init__.py  candidate_provider.py  projection.py  selector.py  types.py
services/experience/shanhai_experience/: __init__.py  models.py  store.py
services/experience/shanhai_experience/ingest/: __init__.py  episode.py  outcome.py  recorder.py
services/feedback/: pyproject.toml
services/feedback/shanhai_feedback/: __init__.py  engine.py  evolution_adapter.py  models.py  registry.py  rules.py
services/harness-core/: pyproject.toml
services/harness-core/shanhai_harness_core/: __init__.py  workflow.py
services/market-data/: pyproject.toml
services/market-data/shanhai_market_data/: __init__.py  acquisition.py  api.py  composition_root.py  fact_mapper.py  factory.py  identity.py  mapper.py  models.py  observation_materializer.py  observation_provider.py  postgres_store.py  provider.py  provider_registry.py  registry.py  resolver.py  scheduler.py  sqlite_repository.py  store.py  sync.py  timeline.py  tushare.py
services/market-data/shanhai_market_data/domain/: __init__.py  repository.py
services/market-data/shanhai_market_data/ports/: __init__.py  in_memory_observation_reader.py  observation_reader.py  sqlite_observation_reader.py
services/market-data/shanhai_market_data/providers/: __init__.py  _http.py  cninfo.py  eastmoney.py
services/market-intelligence/: pyproject.toml
services/market-intelligence/shanhai_market_intelligence/: __init__.py  assembler.py  knowledge_view.py  models.py
services/market-intelligence/shanhai_market_intelligence/evolution/: __init__.py  evidence.py  gate.py  in_memory_store.py  models.py  reasoner.py  resolver.py  revision.py  store.py
services/memory/: pyproject.toml
services/memory/shanhai_memory/: __init__.py  adapters.py  models.py  service.py  tool.py
services/model-router/: models.yaml  pyproject.toml
services/model-router/shanhai_model_router/: __init__.py  registry.py  router.py
services/model-router/shanhai_model_router/providers/: __init__.py  base.py  deepseek.py  mock.py
services/persistence/: pyproject.toml
services/persistence/shanhai_persistence/: __init__.py  factory.py  postgres_run_store.py  sqlite_run_store.py
services/runtime-kernel/: pyproject.toml
services/runtime-kernel/shanhai_runtime_kernel/: __init__.py  context.py  events.py  kernel.py  lifecycle.py  types.py
services/wiki-engine/: pyproject.toml
services/wiki-engine/shanhai_wiki_engine/: __init__.py  agent.py  extractor.py  schema.py  service.py  tool.py
tests/: smoke.py  test_agent_runtime.py  test_artifact_bridge.py  test_candidate_lifecycle.py  test_cognition_builder.py  test_cognition_renderer.py  test_context_health.py  test_context_importer.py  test_context_schema.py  test_conversation_ingest.py  test_decision_registry.py  test_deepseek_provider.py  test_evaluation.py  test_experience.py  test_experience_ingest.py  test_feedback.py  test_local_persistence.py  test_memory.py  test_run_store.py  test_run_store_identity.py  test_wiki_extraction.py
(+141 files in other folders)
