[project]
name = "shanhai"
version = "0.2.0"
description = "ShanHai (山海) — AI Native 中国资本市场认知与决策系统"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = [
    "services/harness-core",
    "services/model-router",
    "services/agent-runtime",
    "services/runtime-kernel",
    "services/experience-runtime",
    "services/market-data",
    "services/wiki-engine",
    "services/data-pipeline",
    "services/evaluation",
    "services/experience",
    "services/experience-evolution",
    "services/experience-artifact",
    "services/feedback",
    "services/memory",
    "services/persistence",
    "packages/schemas",
    "packages/prompts",
    "packages/tools",
    "apps/api",
]

[tool.uv.sources]
shanhai-schemas = { workspace = true }
shanhai-prompts = { workspace = true }
shanhai-tools = { workspace = true }
shanhai-harness-core = { workspace = true }
shanhai-model-router = { workspace = true }
shanhai-agent-runtime = { workspace = true }
shanhai-runtime-kernel = { workspace = true }
shanhai-experience-runtime = { workspace = true }
shanhai-market-data = { workspace = true }
shanhai-wiki-engine = { workspace = true }
shanhai-data-pipeline = { workspace = true }
shanhai-evaluation = { workspace = true }
shanhai-experience = { workspace = true }
shanhai-experience-evolution = { workspace = true }
shanhai-experience-artifact = { workspace = true }
shanhai-feedback = { workspace = true }
shanhai-memory = { workspace = true }
shanhai-persistence = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
