[project]
name = "shanhai-agent-runtime"
version = "0.1.0"
description = "ShanHai Agent Runtime — Agent 执行模型(think/act/observe)、生命周期、运行记录、Memory 接口"
requires-python = ">=3.11"
dependencies = [
    "shanhai-schemas",
    "shanhai-tools",
    "shanhai-model-router",
    "shanhai-harness-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_agent_runtime"]
