[project]
name = "shanhai-evaluation"
version = "0.1.0"
description = "ShanHai Evaluation — Agent/模型评估框架（Phase 0 仅骨架）"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_evaluation"]
