[project]
name = "shanhai-experience-evolution"
version = "0.1.0"
description = "ShanHai Experience Evolution — 候选经验生命周期层（ADR 0016/0017 Stage 2-b：Candidate → Validation 生命周期）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_experience_evolution"]
