[project]
name = "shanhai-experience-runtime"
version = "0.1.0"
description = "ShanHai Experience Runtime — experience access / selection / projection contract layer（PR-4.1）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_experience_runtime"]
