[project]
name = "shanhai-harness-core"
version = "0.1.0"
description = "ShanHai Harness Core — Workflow Engine（自研最小骨架，见 ADR 0003）"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_harness_core"]
