[project]
name = "shanhai-market-data"
version = "0.1.0"
description = "ShanHai Market Data — A-share data foundation provider, entity schema, ingestion, and company intelligence API"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
postgres = [
    "psycopg>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_market_data"]
