[project]
name = "shanhai-market-intelligence"
version = "0.1.0"
description = "ShanHai Market Intelligence — Context Layer: MarketContextSnapshot / ContextAssembler over market-data observations (ADR 0019, M3.4)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "shanhai-market-data",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_market_intelligence"]
