[project]
name = "shanhai-memory"
version = "0.1.0"
description = "ShanHai Memory — Agent 记忆访问层（ADR 0012 Layer 1：Runtime Access Layer，三层统一通路，不含持久 Storage）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "shanhai-tools",
    "shanhai-agent-runtime",
    "shanhai-wiki-engine",
    "shanhai-experience",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_memory"]
