[project]
name = "shanhai-model-router"
version = "0.1.0"
description = "ShanHai Model Router — 统一模型注册、选择与调用"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "shanhai-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_model_router"]
