[project]
name = "shanhai-persistence"
version = "0.1.0"
description = "ShanHai Persistence — 运行记录等数据落库实现（见 ADR 0008）"
requires-python = ">=3.11"
dependencies = [
    "shanhai-agent-runtime",
    "pydantic>=2.6",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_persistence"]
