[project]
name = "shanhai-runtime-kernel"
version = "0.1.0"
description = "ShanHai Runtime Kernel — Run 编排内核（orchestrator，非 executor）：Runtime lifecycle / RuntimeContext / RuntimeEvent（Runtime Kernel v0.7 Phase 1 PR-1 skeleton）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shanhai_runtime_kernel"]
